# corrosive-fog

./: .gitignore  Cargo.toml  LICENSE  README.md  ideas.txt
migrations/20170718205813_create_notes/: up.sql
src/: dbmodel.rs  lib.rs  main.rs  model.rs  persist.rs  sync.rs
