[package]
name = "corrosive-fog"
version = "0.1.0"
authors = ["Björn Löfroth <bjorn.lofroth@gmail.com>"]

[dependencies]
rocket = "0.3.0"
rocket_codegen = "0.3.0"
rocket_contrib = "0.3.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "0.14.0", features = ["postgres"] }
diesel_codegen = { version = "0.14.0", features = ["postgres"] }
dotenv = "0.9.0"
r2d2 = "0.7.0"
r2d2-diesel = "0.14.0"